<resources>
    <string name="app_name">Easy GetIn</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm">Confirm</string>
    <string name="logo_description">Car Image</string>
    <string name="title_activity_item">Item</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="tipe_mobil">Tipe Mobil</string>
    <string name="plat_nomor">Plat Nomor</string>
    <string name="warna_mobil">Warna Mobil</string>
    <string name="save">Save</string>
    <string name="foto_mobil">Foto Mobil</string>
    <string name="map_nearby_place"><![CDATA[MAP & NEARBY PLACE]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>