<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/saveEditMobilBtn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tipeMobilTV"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="Tipe Mobil" />

            <EditText
                android:id="@+id/tipeMobilET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/tipe_mobil"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="#2d2f31" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/platNomorTV"
                android:layout_width="90dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="Plat Nomor" />

            <EditText
                android:id="@+id/platNomorET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/plat_nomor"
                android:inputType="textCapCharacters"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="#2d2f31" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/WarnaMobilTV"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="Warna Mobil" />

            <EditText
                android:id="@+id/warnaMobilET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/warna_mobil"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="#2d2f31" />
        </LinearLayout>

        <!--        <ImageView-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_width="200dp"-->
<!--            android:layout_height="200dp"-->
<!--            android:id="@+id/fotoMobilIV"-->
<!--            />-->

        <ImageView
            android:id="@+id/fotoMobilIV"
            android:layout_width="240dp"
            android:layout_height="180dp"
            android:layout_margin="16dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_launcher_background" />

        <Button
            android:id="@+id/fotoMobilBtn"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/foto_mobil"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/saveMobilBtn"
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:onClick="saveData"
            android:text="@string/save"
            android:textColor="@color/black" />

        <ProgressBar
            android:id="@+id/progressBarEditMobil"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/black"
            android:visibility="gone"
            />
    </LinearLayout>

<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
<!--        android:id="@+id/navBar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="bottom"-->
<!--        app:menu="@menu/bottom_navbar" />-->

</LinearLayout>